use color cars in scss

--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding-top:50px;
   padding-bottom:50px;
-  border-bottom:5px solid #F7296E;
+  border-bottom:5px solid $magaenta;
   >.inner {
     margin:0 auto;
     max-width:1040px;
