--- a/src/partials/recentBlocks/recentBlocks.scss
+++ b/src/partials/recentBlocks/recentBlocks.scss
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     max-width:1040px;
     width:calc(100% - 40px);
-    background: #311B58;
+    background: $aubergin;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.11);
     border-radius: 10px;
     color:white;
@@ -16,6 +16,6 @@
     font-size:30px;
   }
   .account-address {
-    color: #F7296E
+    color: $magaenta
   }
 }
