--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 html, body {
   margin:0;
   padding:0;
-  background-color: $lightgrey
+  background-color: $smoke
 }
 #app {
   font-family: 'Roboto', sans-serif;
