--- a/src/screens/address/address.scss
+++ b/src/screens/address/address.scss
@@ -7,7 +7,7 @@
   .title {
     margin-top:0;
     font-size:30px;
-    border-bottom:2px solid #311B58;
+    border-bottom:2px solid $aubergin;
     padding-bottom:20px;
     margin-bottom:20px;
   }
