--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,9 +1,8 @@
 //https://coolors.co/311b58-6f53a1-f0f0f0-f5f5f5-f7296e
 
 $aubergin : #311B58;
-$aubergine_light : #6F53A1;
+$aubergineLight : #6F53A1;
 $silver : #F0F0F0;
 $smoke : #F5F5F5;
-$lightgrey: #F5F5F5;
 $magaenta : #F7296E;
 $black : #FFFFFF;
