--- a/src/screens/block/block.scss
+++ b/src/screens/block/block.scss
@@ -1,7 +1,7 @@
 .block-screen {
   .header {
     background-color:$aubergin;
-    color:white;
+    color:$white;
   }
   .block-transactions,
   .header > * {
