--- a/src/screens/blockList/blockList.scss
+++ b/src/screens/blockList/blockList.scss
@@ -1,6 +1,6 @@
 .block-list-screen {
   background: $aubergin;
-  color:white;;
+  color:$white;;
   .inner {
     margin:0 auto;
     max-width:1040px;
