--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -5,4 +5,5 @@ $aubergineLight : #6F53A1;
 $silver : #F0F0F0;
 $smoke : #F5F5F5;
 $magaenta : #F7296E;
-$black : #FFFFFF;
+$white : #FFFFFF;
+$black : #000000;
