--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ html, body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #311B58;
+  color: $aubergin;
   font-size:18px;
   position:relative;
   z-index:1;
@@ -21,7 +21,7 @@ html, body {
   display:block;
   width:100%;
   height:80px;
-  background: #311B58;
+  background: $aubergin;
 
 }
 .network-name {
@@ -68,7 +68,7 @@ nav {
   position:absolute;
   top:0;
   width:100%;
-  color:white;
+  color:$white;
 }
 nav >.inner >:first-child ,
 nav >.inner >:last-child {
