--- a/src/partials/marketStats/marketStats.scss
+++ b/src/partials/marketStats/marketStats.scss
@@ -1,6 +1,6 @@
 .market-stats-partial {
   text-align:center;
-  background: $black;
+  background: $white;
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.11);
   border-radius: 10px;
   width:calc(100% - 50px);
