--- a/src/screens/address/address.scss
+++ b/src/screens/address/address.scss
@@ -6,7 +6,7 @@
   }
   .title {
     margin-top:0;
-    font-size:30px;
+    @include font-size(xl);
     border-bottom:2px solid $aubergin;
     padding-bottom:20px;
     margin-bottom:20px;
