--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@ html, body {
   padding:5px 7px;
   background: #F7296E;
   border-radius: 5px;
-  @media screen and (max-width:600px) {
+  @include only-phone {
     width:100%;
     bottom:0;
     left:0;
@@ -82,7 +82,7 @@ nav {
 }
 nav >.inner >:first-child ,
 nav >.inner >:last-child {
-  @media screen and (min-width:600px) {
+  @include tablet-and-desktop {
     width:280px;
   }
 }
@@ -105,13 +105,13 @@ nav a {
   color:inherit;
   text-decoration:none;
   margin:0 10px;
-  @media screen and (max-width:600px) {
+  @include only-phone {
     margin:0 10px 0 0;
   }
 }
 nav .logo {
   display:flex;
-  @media screen and (max-width:600px) {
+  @include only-phone {
     display:none;
   }
 }
