--- a/src/partials/recentBlocks/recentBlocks.scss
+++ b/src/partials/recentBlocks/recentBlocks.scss
@@ -11,7 +11,7 @@
     color:$white;
     padding:50px;
     margin:0 auto;
-    @media screen and (max-width:600px) {
+    @include only-phone {
       padding:20px;
     }
   }
@@ -21,7 +21,7 @@
   .account-address {
     color: $magaenta
   }
-  @media screen and (max-width:600px) {
+  @include only-phone {
     table, td {
       display:block;
     }
