--- a/src/screens/blockList/blockList.scss
+++ b/src/screens/blockList/blockList.scss
@@ -16,26 +16,26 @@
     align-items:flex-end;
     flex-wrap:wrap;
     padding-bottom:15px;
-    @media screen and (max-width:600px) {
+    @include only-phone {
       display:block;
     }
   }
   .title {
     font-weight:500;
     @include font-size(xl);
-    @media screen and (max-width:600px) {
+    @include only-phone {
       @include font-size(l);
     }
   }
   .ago .number {
     @include font-size(xxl);
-    @media screen and (max-width:600px) {
+    @include only-phone {
       @include font-size(l);
     }
   }
   .ago .unit {
     @include font-size(m);
-    @media screen and (max-width:600px) {
+    @include only-phone {
       @include font-size(s);
     }
   }
@@ -45,7 +45,7 @@
   .block-number {
     @include font-size(xl);
   }
-  @media screen and (max-width:600px) {
+  @include only-phone {
     table, td {
       display:block;
     }
