--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,6 @@
+$content-max-width: 1040px;
+$content-margin: 20px;
+
 //https://coolors.co/311b58-6f53a1-f0f0f0-f5f5f5-f7296e
 
 $aubergin : #311B58;
