--- a/src/partials/recentBlocks/recentBlocks.scss
+++ b/src/partials/recentBlocks/recentBlocks.scss
@@ -3,14 +3,12 @@
   background:$white;;
   > .inner {
     box-sizing: border-box;
-    max-width:1040px;
-    width:calc(100% - 40px);
+    @include content-max-width;
     background: $aubergin;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.11);
     border-radius: 10px;
     color:$white;
     padding:50px;
-    margin:0 auto;
     @include only-phone {
       padding:20px;
     }
