--- a/src/screens/status/status.scss
+++ b/src/screens/status/status.scss
@@ -1,7 +1,5 @@
 .status-screen {
   > * {
-    max-width:1040px;
-    margin:0 auto;
-    width:calc(100% - 40px);
+    @include content-max-width;
   }
 }
