make transaction component prettier

--- a/src/components/transaction/transaction.scss
+++ b/src/components/transaction/transaction.scss
@@ -1,15 +1,39 @@
 .transaction {
-  display:flex;
-  justify-content:space-between;
-  flex-wrap:wrap;
-}
+  .transaction-header {
+    border-bottom:1px solid $aubergin;
+    padding-bottom:20px;
+    align-items:flex-end;
+  }
+  .transaction-header ,
+  .transaction-body .grid {
+    margin-bottom:10px;
+    margin-top:10px;
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+  }
+  .transaction-type.coinbase {
+    background-color:$magaenta;
+  }
+  .transaction-type {
+    padding:7px 15px;
+    border-radius:2px;
+    background-color:$aubergin;
+    color:$white;
+  }
 
-.transaction > div:first-child {
-  width:100%;
-}
-.transaction > div {
-  margin:4px 0;
-}
-.account-address {
-  color:$magaenta;
+  .account-address {
+    color:$magaenta;
+  }
+  .query-spec,
+  .response-spec,
+  .query,
+  .response {
+    font-family: 'Roboto Mono', monospace;
+    background:lighten($black, 20);
+    padding:15px;
+    max-height:300px;
+    overflow:scroll;
+    color:darken($white, 10);
+  }
 }
