change color black to slightly lighter shade

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -9,7 +9,7 @@ $silver : #F0F0F0;
 $smoke : #F5F5F5;
 $magaenta : #F7296E;
 $white : #FFFFFF;
-$black : #000000;
+$black : #1E1E1E;
 
 $phone-width : 600px;
 $desktop-width : 900px;
