use named-address in block list screen

--- a/src/screens/blockList/blockList.scss
+++ b/src/screens/blockList/blockList.scss
@@ -45,6 +45,16 @@
   }
   .account-address {
     color:$magaenta;
+    a {
+      display:inline-block;
+    }
+    .named-address {
+      display:inline-block;
+    }
+    .named-address .ae-address {
+      display:inline-block;
+      @include font-size(m);
+    }
   }
   .transactions {
     margin-bottom:50px;
